--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>架空サイト</title>
-    <meta property="og:title" content="ページのタイトル" />
+    <!-- <meta property="og:title" content="ページのタイトル" />
     <meta property="og:type" content="ページの種類" />
     <meta property="og:url" content="ページのURL" />
     <meta property="og:image" content="サムネイル画像のURL" />
     <meta property="og:site_name" content="サイト名" />
-    <meta property="og:description" content="ページのディスクリプション" />
+    <meta property="og:description" content="ページのディスクリプション" /> -->
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
