--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>架空サイト</title>
-    <!-- <meta property="og:title" content="ページのタイトル" />
-    <meta property="og:type" content="ページの種類" />
-    <meta property="og:url" content="ページのURL" />
-    <meta property="og:image" content="サムネイル画像のURL" />
-    <meta property="og:site_name" content="サイト名" />
-    <meta property="og:description" content="ページのディスクリプション" /> -->
+    <meta property="og:title" content="Sound_AroundのTOPページ" />
+    <meta property="og:type" content="website" />
+    <!-- URLは絶対パスで指定する -->
+    <meta property="og:url" content="https://calm-meadow-04676.herokuapp.com/index.html" /> 
+    <!-- 画像は絶対パスで指定する -->
+    <meta property="og:image" content="https://calm-meadow-04676.herokuapp.com/img/mv.png" />
+    <meta property="og:site_name" content="Sound_Around" />
+    <meta property="og:description" content="ページのディスクリプション" />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
