--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>架空サイト</title>
+    <title>架空サイト_イヤホン</title>
     <meta property="og:title" content="Sound_AroundのTOPページ" />
     <meta property="og:type" content="website" />
     <!-- URLは絶対パスで指定する -->
