--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- 画像は絶対パスで指定する -->
     <meta property="og:image" content="https://calm-meadow-04676.herokuapp.com/img/mv.jpeg" />
     <meta property="og:site_name" content="Sound_Around" />
-    <meta property="og:description" content="ページのディスクリプション" />
+    <meta property="og:description" content="架空のイヤホン製品を紹介するWebサイトです。イヤホンで音楽を聴くと世界が変わります。" />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
