パスを指定

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta property="og:title" content="Sound_AroundのTOPページ" />
     <meta property="og:type" content="website" />
     <!-- URLは絶対パスで指定する -->
-    <meta property="og:url" content="https://calm-meadow-04676.herokuapp.com/index.html" /> 
+    <meta property="og:url" content="__DIR__ ./index.html" /> 
     <!-- 画像は絶対パスで指定する -->
-    <meta property="og:image" content="https://calm-meadow-04676.herokuapp.com/img/mv.jpg" />
+    <meta property="og:image" content="__DIR__ ./img/mv.jpg" />
     <meta property="og:site_name" content="Sound_Around" />
     <meta property="og:description" content="架空のイヤホン製品を紹介するWebサイトです。イヤホンで音楽を聴くと世界が変わります。" />
     <link rel="stylesheet" href="./style.css">
